SF Primes/src/objects/Premier_Dealer_Visit__c.object
<CustomObject>
    <description>Location where solution consultants log on-site visits with premier dealer accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Premier Dealer Visits</relationshipLabel>
        <relationshipName>R00N40000001leACEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLX_CreateDate__c</fullName>
        <label>SLX CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLX_ID__c</fullName>
        <label>SLX ID</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Hours__c</fullName>
        <label>Visit Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Notes__c</fullName>
        <label>Visit Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visiting_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001lqVfEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Premier Dealer Visit</label>
    <listViews>
        <fullName>AllPremierDealerVisits</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Visiting_Rep__c</columns>
        <columns>Visit_Date__c</columns>
        <columns>Visit_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Premier Dealer Visits</label>
    </listViews>
    <listViews>
        <fullName>MyPremierDealerVisits</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Visiting_Rep__c</columns>
        <columns>Visit_Date__c</columns>
        <columns>Visit_Hours__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Premier Dealer Visits</label>
    </listViews>
    <nameField>
        <displayFormat>ID - {00000}</displayFormat>
        <label>Prem Dealer Visit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premier Dealer Visits</pluralLabel>
    <recordTypes>
        <fullName>Premier_Dealer_Visit_MSR</fullName>
        <active>true</active>
        <label>Premier Dealer Visit - MSR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>